contact-me not displaying well on mobile, fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -702,7 +702,7 @@ p {
 
 @media all and (max-width: 575.98px) {
     .form-group {   
-     font-size: 16px;
+     font-size: 14px;
      margin-bottom: 0;
     }
 }
